[gd_scene load_steps=4 format=3 uid="uid://g6gbeo5cewfj"]

[ext_resource type="Script" path="res://scripts/player/camera_rig.gd" id="1_fpow2"]
[ext_resource type="Shader" path="res://assets/shaders/forground_shader.gdshader" id="2_6elgj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ighqr"]
shader = ExtResource("2_6elgj")
shader_parameter/MULTIPLIER = 0.56
shader_parameter/SCALE = 0.5
shader_parameter/SOFTNESS = 0.45
shader_parameter/BASE_OPACITY = 1.0

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_fpow2")

[node name="base_camera" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="base_camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="background_subviewport" type="SubViewport" parent="base_camera/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="background_camera" type="Camera3D" parent="base_camera/background_viewport_container/background_subviewport"]
cull_mask = 1047553

[node name="foreground_viewport_container" type="SubViewportContainer" parent="base_camera"]
material = SubResource("ShaderMaterial_ighqr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="foreground_subviewport" type="SubViewport" parent="base_camera/foreground_viewport_container"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="foreground_camera" type="Camera3D" parent="base_camera/foreground_viewport_container/foreground_subviewport"]
cull_mask = 1047554
